# kidney-vlm

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh
conf/: config.yaml
conf/01_pathology_features/: default.yaml
conf/01_pathology_proj/: 02_gen_path_case_captions.yaml  03_build_path_proj_train_qa.yaml  04_train_path_projectors.yaml
conf/01_pathology_segmentation/: 01_run_pathology_segmentation.yaml
conf/02_radiology_features/: 02_prepare_radiology_series_manifest.yaml  03_extract_radiology_pngs.yaml  04_extract_radiology_features.yaml  06_register_radiology_artifacts_into_registry.yaml
data/: tcga_build_path_index.py  tcga_download_path_from_index.py  tcga_tile_svs.py
kidney_vlm/: __init__.py  eval_utils.py  gdc.py  jsonl.py  medgemma.py  tcga_eval.py  tcga_tasks.py  tiling.py
scripts/: README.md  eval_medgemma_kidney_stone.py  eval_medgemma_tcga_path.py
tests/: test_collator_embeddings.py  test_demo_path_projector_script.py  test_demo_projector_script.py  test_dnam_case_caption_script.py  test_dnam_feature_import.py  test_dnam_qwen_projector.py  test_feature_registry.py  test_freeze_policy.py  test_hf_dataset_smoke.py  test_hf_integration.py  test_hydra_compose.py  test_kits23_source_builder.py  test_path_case_caption_script.py  test_path_proj_train_qa_script.py  test_path_proj_training_split.py  test_path_projectors_multi_image.py  test_pathology_qwen_projector.py  test_pathology_report_filters.py  test_pathology_segmentation_runner.py  test_pathology_space_saver_extractor.py  test_pmc_oa_caption_dataset.py  test_pmc_oa_caption_model.py  test_pmc_oa_feature_store.py  test_pmc_oa_source_builder.py  test_png_preprocessing.py  test_prepare_uni_tcga_features_script.py  test_print_registry_status_script.py  test_projector_caption_collator.py  test_projectors_multi_image.py  test_qwen_projector.py  test_rad_proj_train_qa_script.py  test_rad_proj_training.py  test_radiology_dicom_qc.py  test_radiology_feature_registry.py  test_radiology_proj_train_qa_script.py  test_radiology_proj_training.py  test_radiology_projector_collator.py  test_radiology_qwen_projector.py  test_registry_schema.py  test_repo_root.py  (+9 more)
(+173 files in other folders)
