[project]
name = "kidney-vlm"
version = "0.1.0"
description = "Kidney pathology+radiology VLM research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20.0",
  "hydra-core>=1.3.2",
  "openai>=1.58.0",
  "omegaconf>=2.3.0",
  "pandas>=2.2.0",
  "pypdf>=5.1.0",
  "pyarrow>=15.0.0",
  "requests>=2.32.0",
  "torch>=2.2.0",
  "tqdm>=4.66.0",
  "transformers>=4.41.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kidney_vlm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
