[project]
name = "kidney-vlm"
version = "0.1.0"
description = "Kidney pathology+radiology VLM research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=2.20.0",
  "einops>=0.8.2",
  "einops-exts>=0.0.4",
  "geopandas>=1.1.2",
  "h5py>=3.15.1",
  "huggingface_hub>=1.4.1",
  "hydra-core>=1.3.2",
  "matplotlib>=3.10.8",
  "numpy>=2.2.0",
  "opencv-python>=4.13.0.92",
  "openai>=1.58.0",
  "openslide-bin>=4.0.0.11",
  "openslide-python>=1.4.3",
  "omegaconf>=2.3.0",
  "pandas>=2.2.0",
  "pillow>=12.1.1",
  "pypdf>=5.1.0",
  "pyarrow>=15.0.0",
  "requests>=2.32.0",
  "safetensors>=0.7.0",
  "timm>=1.0.25",
  "torch>=2.2.0",
  "torchvision>=0.20.0",
  "tqdm>=4.66.0",
  "transformers>=4.41.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kidney_vlm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
